<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:text="@string/createShipmentLabel"
            android:id="@+id/createShipmentButton" android:layout_gravity="center"/>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/writeTagLabel"
            android:id="@+id/writeTagButton" android:layout_gravity="center"/>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:text="Pobierz przesyłkę"
                android:id="@+id/startShipmentDeliveryButton" android:layout_gravity="center"/>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:text="Dostarczenie przesyłki"
            android:id="@+id/endShipmentDeliveryButton" android:layout_gravity="center"/>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settingsLabel"
            android:id="@+id/settingsButton" android:layout_gravity="center"/>
</LinearLayout>

